docs : 첫 서버를 만듦
- src 폴더 생성
- src 폴더 안래 server.js를 만듦
- server.js에 express를 import함, 그리고 express를 이용하여 port를 불러오는 listen 함수를 제작함

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node index.js"
+    "dev": "nodemon --exec babel-node src/server.js"
   },
   "repository": {
     "type": "git",
