--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The best way to watch videos",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
